<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ozbluelogo_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practitioner_login"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/button_3d"
        android:elevation="12dp"
        android:text="@string/txt_LOGIN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"

        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.269" />

    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/user_login_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_3d"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/user_login"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="791dp" />

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="Forgot Password?"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
